v3.10.2 (XXXX-XX-XX)
--------------------

* BTS-1141: Changed the default value of startup option
  `--rocksdb.enforce-block-cache-size-limit` from `true` to `false`.
  This change prevents RocksDB from going into read-only mode when an internal
  operation tries to insert some value into the block cache, but can't do so
  because the block cache's capacity limit is reached.

* Don't log Boost ASIO warnings such as `asio IO error: 'stream truncated'` when
  a peer closes an SSL/TLS connection without performing a proper connection
  shutdown.

* Disallow creating new databases with a `replicationFactor` value set to a
  value lower than `--cluster.min-replication-factor` or higher than
  `--cluster.max-replication-factor`. Previously the `replicationFactor`
  settings for new databases were not bounds-checked, only for new collections.

* Fixed Github issue #16451: In certain situations, a LIMIT inside a subquery
  could erroneously reduce the number of results of the containing (sub)query.

* Added a feature to the ResignLeadership job. By default, it will now
  undo the leader changes automatically after the server is restarted,
  unless the option `undoMoves` is set to `false`. This will help to
  make rolling upgrades and restarts less troublesome, since the shard
  leaderships will not get unbalanced.

* Add missing metrics for user traffic: Histograms:
    `arangodb_client_user_connection_statistics_bytes_received`
    `arangodb_client_user_connection_statistics_bytes_sent`
  These numbers were so far only published via the statistics API.
  This is needed for Oasis traffic accounting.

* Added agency options
    --agency.supervision-delay-add-follower
  and
    --agency.supervision-delay-failed-follower
  to delay supervision actions for a configurable amount of seconds. This is
  desirable in case a DBServer fails and comes back quickly, because it gives
  the cluster a chance to get in sync and fully resilient without deploying